gap-analysis/gapanalysis.css: Increase size of gap issue titles

--- a/gap-analysis/gapanalysis.css
+++ b/gap-analysis/gapanalysis.css
@@ -5,7 +5,7 @@ h3 a { color: #006; }
 h3 a:link { color: #006; }
 h3 a:active { color: #006; }
 h3 a:visited { color: #006; }
-h4 { margin-left: 0; }
+h4 { margin-left: 0; font-size:1.2rem; }
 
 
 
